[gd_scene load_steps=3 format=3 uid="uid://bqy76nqoev3a"]

[ext_resource type="Script" path="res://UI/pause_menu.gd" id="1_gqsv1"]
[ext_resource type="PackedScene" uid="uid://dtrcyjwykrst5" path="res://UI/Controls.tscn" id="2_us5eh"]

[node name="PauseMenu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gqsv1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = -104.5
offset_right = 62.0
offset_bottom = 104.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 8

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 32
text = "PAUSED"

[node name="Resume" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Resume
"

[node name="Control" parent="GridContainer" instance=ExtResource("2_us5eh")]
visible = false
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Controls" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Controls"

[node name="times" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Settings
"

[node name="Quit" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Quit"

[node name="Back" type="Button" parent="GridContainer"]
visible = false
layout_mode = 2
text = "Back"

[node name="Sandbox" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Sandbox"

[connection signal="pressed" from="GridContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="GridContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="GridContainer/times" to="." method="_on_times_pressed"]
[connection signal="pressed" from="GridContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="GridContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="GridContainer/Sandbox" to="." method="_on_sandbox_pressed"]
